# handon-fx

./: .env.example  .gitignore  Dockerfile  app.py  lambda_handler.py  package-lock.json  pyproject.toml  readme.md  serverless.yml
backtesting/: backtesting.py
handon_fx/: main.py
handon_fx/chat/: chatbot.py  mastodon_api.py  models.py  utils.py
handon_fx/fx/: __init__.py  api.py  broker.py  exceptions.py  models.py  rate.py  strategy.py  trade.py  utils.py
scripts/: generate_key.py  subscribe.py
tests/backtesting/: test_backtest.py
tests/backtesting/backtesting/: test__broker.py  test_order.py  test_position.py  test_strategy.py  test_trade.py
tests/handon_fx/chat/: test_chatbot.py  test_utils.py
